--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -1,16 +1,22 @@
+@use './app/styles/base/_variables' as *;
+@use './app/styles/utils/_mixins' as _mixins;
+@use './app/styles/base/_base' as _base;
+
+
 .formContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
+    max-width: 400px;
     margin: 0 auto;
-    padding: 0 1rem;
-    max-width: 500px;
+    padding: 1rem;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
+    font-size: clamp(1rem, 5vw, 1.5rem);
 
     input {
         width: 100%;
@@ -23,6 +29,7 @@
 
     textarea {
         width: 100%;
+        max-width: 600px;
         margin: 0.5rem 0;
         padding: 0.5rem;
         border: 1px solid #ccc;
@@ -32,7 +39,7 @@
 
     button {
         width: 100%;
-        margin: 0.5rem 0;
+        max-width: 100%;
         padding: 0.5rem;
         border: 1px solid #ccc;
         border-radius: 5px;
@@ -40,9 +47,7 @@
         background-color: #f1356d;
         color: #fff;
         cursor: pointer;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
+        margin: 0.5rem 0;
     }
     button:hover {
         background-color: #211f1f;
