--- a/app/styles/pages/contact.module.scss
+++ b/app/styles/pages/contact.module.scss
@@ -1,14 +1,21 @@
+@use './app/styles/base/_variables' as *;
+@use './app/styles/utils/_mixins' as _mixins;
+@use './app/styles/base/_base' as _base;
+
+.main {
+  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  line-height: 1.5;
+  box-sizing: border-box;
+}
+
 .container {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px #ccc;
-    background-color: #fff;
-    color: #000;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 1em;
 }
