--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -83,7 +83,7 @@
 
     a {
       text-decoration: none;
-      color: $primary-text-color;
+      color: gray;
       margin: 0 auto;
       display: flex;
     }
@@ -91,9 +91,16 @@
   }
 
     .navLinks a:hover {
-      border-bottom: 2px solid $secondary-color;
+      color: black;
+      transition: all 0.3s ease-in-out;
       
     }
+    .navLinks a:active {
+      color: gainsboro;
+      transition: all 0.8s ease-in-out;
+      
+    }
+
 
   .InstagramSVG{
     display: none;
@@ -189,7 +196,7 @@
   }
 
   .navLinks a:hover {
-    border-bottom: 2px solid $secondary-color;
+    color: black;
   }
 
     .logo {
