--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -9,48 +9,54 @@
   max-width: 1100px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   line-height: 1.5;
   box-sizing: border-box;
 }
 
 .headerContainer{
-    background-color: gainsboro;
     width: 100%;
     max-width: 1100px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    border-radius: 1em;
-    // border: 2px solid $secondary-color;
+    // margin-bottom: 1em;
+    // margin-top: 1em;
+}
+
+.imageContainer{
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 0;
+  
+}
+
+.titleContainer{
+  width: 75%;
 }
 
 .title{
-  box-sizing: border-box;
-    font-size: clamp(1rem, 2vw, 2rem);
+    box-sizing: border-box;
+    font-size: clamp(1rem, 2vw, 1.7rem);
     font-family: $primary-font;
     color:$secondary-color;
     margin: 0;
     padding: 0;
     text-align: start;
-    width: 75%;
+    width: 100%;
     padding: 1em;
+    font-weight: 500;
     
 }
 
-.imageContainer{
-  
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  margin: 0 auto;
-  justify-content: space-between;
-  
-}
+
 
 .section{
     width: 100%;
@@ -74,7 +80,7 @@
     padding: 1em;
 }
 
-@media screen and (max-width: 1240px) {
+@media screen and (min-width: 320px) {
   .main {
     display: flex;
     flex-direction: column;
@@ -84,56 +90,104 @@
     box-sizing: border-box;
 
   }
+
+  .headerContainer{
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+  
   .imageContainer{
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 1em;
-  }
-
-}
-
-@media screen and (max-width: 768px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    line-height: 1.5;
-    box-sizing: border-box;
-
-  }
-  .imageContainer{
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    margin-bottom: 1em;
-  }
-
-}
-
-@media screen and (max-width: 480px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    line-height: 1.5;
-    box-sizing: border-box;
-
-  }
-  .imageContainer{
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
+    width: 100%;
+    padding: 0;
  
   }
-  .headerContainer
-
    .title{
     width: 100%;
     text-align: start;
-    padding: 1em;
+    padding: 0;
+    font-size: $font-size-small;
 }
+  
+.titleContainer{
+  width: 93%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    line-height: 1.5;
+    box-sizing: border-box;
+
+  }
+
+  .headerContainer{
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+  }
+  
+  .imageContainer{
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 2em;
+    width: 100%;
+    padding: 0;
+ 
+  }
+   .title{
+    width: 100%;
+    text-align: start;
+    padding: 0;
+   
+}
+  
+.titleContainer{
+  width: 93%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    line-height: 1.5;
+    box-sizing: border-box;
+
+  }
+
+  .headerContainer{
+    flex-direction: row;
+    align-items: center;
+    margin: 0 auto;
+  }
+  
+  .imageContainer{
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 2em;
+    width: 60%;
+    padding: 0;
+ 
+  }
+   .title{
+    width: 100%;
+    text-align: start;
+    padding: 0;
+   
+}
+  
+.titleContainer{
+  width: 93%;
+  }
 }
