--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -14,6 +14,7 @@
   margin: 0 auto;
   line-height: 1.5;
   box-sizing: border-box;
+  
 }
 
 .headerContainer{
@@ -24,39 +25,37 @@
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    // margin-bottom: 1em;
-    // margin-top: 1em;
+    margin-bottom: 1em;
+   
 }
 
 .imageContainer{
-  width: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
   padding: 0;
-  
+  flex-basis: 40%;
 }
 
 .titleContainer{
-  width: 75%;
+  margin-bottom: 1em;
+  flex-basis: 60%;
+  box-sizing: border-box;
 }
 
 .title{
     box-sizing: border-box;
-    font-size: clamp(1rem, 2vw, 1.7rem);
     font-family: $primary-font;
-    color:$secondary-color;
-    margin: 0;
+    font-size: $font-size-x-large;
+    color: $secondary-color;
+    margin: 0 auto;
     padding: 0;
     text-align: start;
     width: 100%;
-    padding: 1em;
     font-weight: 500;
-    
+    // border: 2px solid $secondary-color;
 }
-
-
 
 .section{
     width: 100%;
@@ -77,7 +76,9 @@
     margin-bottom: 1em;
     color:$secondary-color;
     font-size: clamp(1rem, 1.5vw, 1.5rem);
-    padding: 1em;
+    padding: 0.5em;
+    // margin-bottom: 1em;
+    display: inline-block;
 }
 
 @media screen and (min-width: 320px) {
@@ -109,12 +110,13 @@
    .title{
     width: 100%;
     text-align: start;
-    padding: 0;
     font-size: $font-size-small;
+    padding: 0.5em;
+    display: inline-block;
 }
   
 .titleContainer{
-  width: 93%;
+  width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -188,6 +190,7 @@
 }
   
 .titleContainer{
-  width: 93%;
+  width: 100%;
+  box-sizing: border-box;
   }
 }
