style contact form

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -2,7 +2,7 @@ $primary-text-color: #333;
 $secondary-text-color: #fff;
 
 $primary-color: #ffffff;
-$secondary-color: #2c3e50;
+$secondary-color: #020202;
 $tertiary-color: #e74c3c;
 $quaternary-color: #3498db;
 $quinary-color: #f1c40f;
