add animation on loading

--- a/app/styles/components/Loading.module.scss
+++ b/app/styles/components/Loading.module.scss
@@ -8,6 +8,10 @@
     align-items: center;
     width: 100%;
     max-width: 1100px;
+    margin: 0 auto;
+    position: relative;
+    flex-direction: column;
+    margin-top: 15em;
  
   }
   
