--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -9,11 +9,18 @@
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-direction: column;
+    padding-top: 80vh;
 
     .copyright{
         display: flex;
         justify-content: center;
         align-items: center;
+        position: absolute;
         p{
             font-size: 2rem;
             font-weight: 600;
@@ -28,6 +35,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        position: absolute;
         p{
             font-size: 3rem;
             font-weight: 100;
