--- a/app/styles/components/Loading.module.scss
+++ b/app/styles/components/Loading.module.scss
@@ -2,104 +2,69 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    position: relative;
-    flex-direction: column;
-    margin-top: 14em;
- 
-  }
-  
-  .spinnerCenter {
-    position: relative;
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-  }
-  
-  .spinnerBlade {
-    position: absolute;
-    left: 0.4629em;
-    bottom: 0;
-    width: 0.074em;
-    height: 0.2777em;
-    border-radius: 0.0555em;
-    background-color: transparent;
-    transform-origin: center -0.2222em;
-    animation: spinner-fade9234 1s infinite linear;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dotWave {
+  --uib-size: 50px;
+  --uib-speed: 0.6s;
+  --uib-color: #0d0909;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  width: var(--uib-size);
+  height: calc(var(--uib-size) * 0.17);
+  padding-top: calc(var(--uib-size) * 0.34);
+
+  &Dot {
+    flex-shrink: 0;
+    width: calc(var(--uib-size) * 0.17);
+    height: calc(var(--uib-size) * 0.17);
+    border-radius: 50%;
+    background-color: var(--uib-color);
+    will-change: transform;
+
     &:nth-child(1) {
-      animation-delay: 0s;
-      transform: rotate(0deg);
+      animation: jump824 var(--uib-speed) ease-in-out
+        calc(var(--uib-speed) * -0.45) infinite;
     }
-  
+
     &:nth-child(2) {
-      animation-delay: 0.083s;
-      transform: rotate(30deg);
+      animation: jump824 var(--uib-speed) ease-in-out
+        calc(var(--uib-speed) * -0.3) infinite;
     }
-  
+
     &:nth-child(3) {
-      animation-delay: 0.166s;
-      transform: rotate(60deg);
+      animation: jump824 var(--uib-speed) ease-in-out
+        calc(var(--uib-speed) * -0.15) infinite;
     }
-  
+
     &:nth-child(4) {
-      animation-delay: 0.249s;
-      transform: rotate(90deg);
-    }
-  
-    &:nth-child(5) {
-      animation-delay: 0.332s;
-      transform: rotate(120deg);
-    }
-  
-    &:nth-child(6) {
-      animation-delay: 0.415s;
-      transform: rotate(150deg);
-    }
-  
-    &:nth-child(7) {
-      animation-delay: 0.498s;
-      transform: rotate(180deg);
-    }
-  
-    &:nth-child(8) {
-      animation-delay: 0.581s;
-      transform: rotate(210deg);
-    }
-  
-    &:nth-child(9) {
-      animation-delay: 0.664s;
-      transform: rotate(240deg);
-    }
-  
-    &:nth-child(10) {
-      animation-delay: 0.747s;
-      transform: rotate(270deg);
-    }
-  
-    &:nth-child(11) {
-      animation-delay: 0.83s;
-      transform: rotate(300deg);
-    }
-  
-    &:nth-child(12) {
-      animation-delay: 0.913s;
-      transform: rotate(330deg);
+      animation: jump824 var(--uib-speed) ease-in-out infinite;
     }
   }
-  
-  @keyframes spinner-fade9234 {
-    0% {
-      background-color: #69717d;
-    }
-  
-    100% {
-      background-color: transparent;
-    }
+}
+
+@keyframes jump824 {
+  0%,
+  100% {
+    transform: translateY(0px);
   }
+
+  50% {
+    transform: translateY(-200%);
+  }
+}
+  
+  
