--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -4,21 +4,31 @@
 
   .main {
     width: 100%;
-    max-width: 1100px;
+    max-width: 1000px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    // padding-left: 0.3em !important;
-    // padding-right: 0.3em !important;
     overflow: hidden;
-    
-   
+  }
+
+  .imgContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    // border: 5px solid red;
+    position: relative;
+    overflow: hidden;
+    background-clip: content-box;
+    box-sizing: border-box;
+    padding: 0.3em;
+    margin-bottom: 3em;
   }
 
   .object-contain {
-    object-fit: contain;
+    object-fit: cover;
   }
   
   .duration-700 {
@@ -30,7 +40,8 @@
   }
   
   .group-hover\:opacity-75:hover {
-    opacity: 0.8;
+    --tw-bg-opacity: 1;
+    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   }
   
   .scale-110 {
