--- a/app/styles/components/Footer.module.scss
+++ b/app/styles/components/Footer.module.scss
@@ -2,7 +2,6 @@
 
 .main {
     bottom: 0;
-    top: 0;
     left: 0;
     right: 0;
     text-align: center;
@@ -13,6 +12,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: relative;
+
     
 
     .copyright{
