--- a/app/styles/components/Loading.module.scss
+++ b/app/styles/components/Loading.module.scss
@@ -6,7 +6,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  margin: 0 auto;
+  overflow: hidden;
+  height: 65vh;
 }
 
 .container {
