--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -159,6 +159,9 @@
     .lineTop {
       transform-origin: 0.125rem -0.125rem;
     }
+    .lineMiddle {
+      transform-origin: 0.125rem 0.125rem;
+    }
     
     .lineBottom {
       transform-origin: 0.125rem -0.125rem;
