--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -12,6 +12,7 @@
     margin: 0 auto;
     overflow: hidden;
     margin-bottom: 2.2em;
+    margin-top: 1em;
     
   }
 
@@ -21,10 +22,12 @@
     align-items: center;
     width: 100%;
     max-width: 1100px;
+    min-width: none;
     background-clip: content-box;
     border-radius: 0.2em;// 
     overflow: hidden;
     margin: 0 auto;
+    transition: all 0.5s ease-in-out;
   }
 
   .object-contain {
@@ -40,8 +43,7 @@
   }
   
   .group-hover\:opacity-75:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+    transition: all 0.5s ease-in-out;
   }
   
   .scale-110 {
@@ -57,7 +59,7 @@
   }
   
   .scale-100 {
-    transform: scale(1);
+    transform: scale(0.99);
   }
   
   .blur-0 {
@@ -67,3 +69,23 @@
   .grayscale-0 {
     filter: grayscale(0);
   }
+
+  .imgContainer:hover {
+    transform: scale(1.01);
+  }
+  @media screen and (max-width: 800px) {
+    .main {
+      width: 100%;
+      max-width: 1100px;
+    }
+    .imgContainer {
+      width: 98%;
+      max-width: 1100px;
+      margin: 0 auto;
+      overflow: hidden;
+      background-position: center;
+
+    }
+  }
+
+    
