--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -28,6 +28,7 @@
     overflow: hidden;
     margin: 0 auto;
     transition: all 0.5s ease-in-out;
+    
   }
 
   .object-contain {
@@ -59,7 +60,7 @@
   }
   
   .scale-100 {
-    transform: scale(0.99);
+    transform: scale(1);
   }
   
   .blur-0 {
@@ -71,7 +72,10 @@
   }
 
   .imgContainer:hover {
-    transform: scale(1.01);
+      transition: all 0.5s ease-in-out;
+      transform: scale(0.99);
+
+   
   }
   @media screen and (max-width: 800px) {
     .main {
