--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    font-family: $primary-font;
 }
 .container {
     width: 100%;
