--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -13,7 +13,7 @@
     overflow: hidden;
     margin-bottom: 2.2em;
     margin-top: 1em;
-    // box-shadow: 0 0 0.5em 0.1em rgba(0, 0, 0, 0.2);
+    // cd
     border-radius: 0.2em;
     background-color: $primary-color;
     
