--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -13,7 +13,7 @@
     overflow: hidden;
     margin-bottom: 2.2em;
     margin-top: 1em;
-    // cd
+    box-shadow: 0 0 0.5em 0.1em rgba(0, 0, 0, 0.2);
     border-radius: 0.2em;
     background-color: $primary-color;
     
@@ -30,7 +30,9 @@
     border-radius: 0.2em;// 
     overflow: hidden;
     margin: 0 auto;
-    transition: all 0.5s ease-in-out;  
+    transition: all 0.5s ease-in-out;
+    
+    
   }
 
   .object-contain {
@@ -75,7 +77,7 @@
 
   .imgContainer:hover {
       transition: all 0.5s ease-in-out;
-      transform: scale(0.98);
+      transform: scale(0.9);
   }
 
 
