--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -2,14 +2,72 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
+.container{
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1100px;
+    font-family: $primary-font;
+    font-size: $font-size-desktop;
+    gap: 3rem;
+    margin: 0 auto;
+    padding: 0 1rem;
+    margin-bottom: 3em;
+}
+
+ .textContainer{
+    width: 50%;
+    text-align: justify;
+    margin: 0 auto;
+    
+    .buttonWApp{
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 20em;
+        margin: 0 auto;
+        border-radius: 5px;
+        margin-bottom: 1.5em;
+        margin-top: 1.5em;
+        padding: 0.7rem;
+        font-size: $font-size-small;
+        border: none;
+        background-color: #075e54;
+        color: $primary-color;
+    }
+
+    .buttonWApp:hover {
+        background-color: #128c7e;
+        color: $primary-color;
+
+    }
+
+    a{
+        text-decoration: none;
+        color: $primary-color;
+    }
+
+    h1{
+    text-align: center;
+    }
+
+    .description{
+        font-size: $font-size-normal;
+        font-weight: 300;
+        color: $secondary-color;
+      
+    }
+ }
 
 .formContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    max-width: 25em;
+    width: 50%;
+    max-width: 50%;
     margin: 0 auto;
     padding: 1rem;
     background-color: $primary-color;
@@ -18,7 +76,6 @@
     box-sizing: border-box;
     font-size: clamp(1rem, 5vw, 1.5rem);
     font-family: $primary-font;
-    margin-bottom: 3em;
 
     h1 {
         font-size: $font-size-normal;
