--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -2,6 +2,10 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
+.main{
+  width: 100%;
+    max-width: 1100px;
+}
 .container{
     box-sizing: border-box;
     display: flex;
@@ -10,17 +14,16 @@
     width: 100%;
     max-width: 1100px;
     font-family: $primary-font;
-    font-size: $font-size-desktop;
+    font-size: clamp(1rem, 5vw, 1.5rem);
     gap: 3rem;
     margin: 0 auto;
-    padding: 0 1rem;
     margin-bottom: 3em;
 }
 
  .textContainer{
-    width: 50%;
     text-align: justify;
     margin: 0 auto;
+    box-sizing: border-box;
     
     .buttonWApp{
         display: block;
@@ -72,7 +75,7 @@
     padding: 1rem;
     background-color: $primary-color;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
     font-size: clamp(1rem, 5vw, 1.5rem);
     font-family: $primary-font;
@@ -162,4 +165,29 @@
     }
 
     
+}
+
+@media (max-width: 468px) {
+    .main {
+        width: 100%;
+        max-width: 100%;
+    }
+    .container {
+        flex-direction: column;
+        width: 100%;
+        max-width: 1100px;
+        gap: 1rem;
+        box-sizing: border-box;
+    }
+
+    .textContainer {
+        width: 100%;
+        padding: 1rem;
+        box-sizing: border-box;
+    }
+
+    .formContainer {
+        width: 100%;
+        max-width: 100%;
+    }
 }
