--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -5,6 +5,9 @@
 .main{
   width: 100%;
     max-width: 1100px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .container{
     box-sizing: border-box;
@@ -14,16 +17,18 @@
     width: 100%;
     max-width: 1100px;
     font-family: $primary-font;
-    font-size: clamp(1rem, 5vw, 1.5rem);
+    font-size: clamp(0.8rem, 5vw, 1.5rem);
     gap: 3rem;
     margin: 0 auto;
     margin-bottom: 3em;
+    padding: 0 1em;
 }
 
  .textContainer{
     text-align: justify;
     margin: 0 auto;
     box-sizing: border-box;
+    font-size: clamp(0.5rem, 5vw, 1.5rem);
     
     .buttonWApp{
         display: block;
@@ -35,7 +40,7 @@
         margin-bottom: 1.5em;
         margin-top: 1.5em;
         padding: 0.7rem;
-        font-size: $font-size-small;
+        font-size: clamp(0.5rem, 5vw, 1.5rem);
         border: none;
         background-color: #075e54;
         color: $primary-color;
@@ -72,7 +77,6 @@
     width: 50%;
     max-width: 50%;
     margin: 0 auto;
-    padding: 1rem;
     background-color: $primary-color;
     border-radius: 5px;
     // box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -167,7 +171,7 @@
     
 }
 
-@media (max-width: 468px) {
+@media (max-width: 800px) {
     .main {
         width: 100%;
         max-width: 100%;
