--- a/app/styles/components/ContactForm.module.scss
+++ b/app/styles/components/ContactForm.module.scss
@@ -2,91 +2,92 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
-.main{
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    overflow: hidden;
-}
+// .main{
+//     width: 100%;
+//     max-width: 1100px;
+//     margin: 0 auto;
+//     box-sizing: border-box;
+//     overflow: hidden;
+// }
 
-.container{
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1100px;
-    font-family: $primary-font;
-    gap: 3rem;
-    margin: 0 auto;
-    margin-bottom: 3em;
-}
+// .container{
+//     box-sizing: border-box;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     width: 100%;
+//     max-width: 1100px;
+//     font-family: $primary-font;
+//     gap: 3rem;
+//     margin: 0 auto;
+//     margin-bottom: 3em;
+// }
 
- .textContainer{
-    text-align: justify;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1100px;
-    flex-basis: 50%;
-    font-family: $primary-font;
+//  .textContainer{
+//     text-align: justify;
+//     margin: 0 auto;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: space-between;
+//     width: 100%;
+//     max-width: 1100px;
+//     flex-basis: 50%;
+//     font-family: $primary-font;
     
     
-    .buttonWApp{
-        display: block;
-        width: 100%;
-        max-width: 20em;
-        min-width: 10em;
-        margin: 0 auto;
-        border-radius: 0.5em;
-        margin-bottom: 1.5em;
-        margin-top: 1.5em;
-        padding: 0.7rem;
-        font-size: clamp(0.5rem, 5vw, 1.5rem);
-        border: none;
-        background-color: #075e54;
-        color: $primary-color;
-    }
+//     .buttonWApp{
+//         display: block;
+//         width: 100%;
+//         max-width: 20em;
+//         min-width: 10em;
+//         margin: 0 auto;
+//         border-radius: 0.5em;
+//         margin-bottom: 1.5em;
+//         margin-top: 1.5em;
+//         padding: 0.7rem;
+//         font-size: clamp(0.5rem, 5vw, 1.5rem);
+//         border: none;
+//         background-color: #075e54;
+//         color: $primary-color;
+//     }
 
-    .buttonWApp:hover {
-        background-color: #128c7e;
-        color: $primary-color;
+//     .buttonWApp:hover {
+//         background-color: #128c7e;
+//         color: $primary-color;
 
-    }
-    .buttonWApp:active {
-        background-color: #128c7e;
-        color: $primary-color;
-    }
+//     }
+//     .buttonWApp:active {
+//         background-color: #128c7e;
+//         color: $primary-color;
+//     }
 
 
-    a{
-        text-decoration: none;
-        color: $primary-color;
-    }
+//     a{
+//         text-decoration: none;
+//         color: $primary-color;
+//     }
 
-    h2{
-    text-align: center;
-    font-size: clamp(2rem, 5vw, 3rem);
-    }
+//     h2{
+//     text-align: center;
+//     font-size: clamp(2rem, 5vw, 3rem);
+//     }
 
-    .description{
-        font-size: $font-size-normal;
-        font-weight: 300;
-        color: $secondary-color;
-        font-size: clamp(1rem, 5vw, 1.5rem);
+//     .description{
+//         font-size: $font-size-normal;
+//         font-weight: 300;
+//         color: $secondary-color;
+//         font-size: clamp(1rem, 5vw, 1.5rem);
       
-    }
- }
+//     }
+//  }
 
 .formContainer {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    flex-basis: 50%;
+    flex-basis: 100%;
     margin: 0 auto;
     background-color: $primary-color;
     border-radius: 5px;
