--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -66,15 +66,16 @@
       justify-content: space-evenly;
       align-items: center;
       list-style: none;
-      // margin-bottom: 5em;
+      margin-bottom: 0;
       margin-top: 3em;
       border-radius: 0.5em;
       padding-left: 1em;
       padding-right: 1em;
       font-size: $font-size-small;
-      z-index: 1;
+      z-index: 999;
       padding-bottom: 15em;
       padding-top: 7em;
+    
       
       
       li {
