--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -1,7 +1,7 @@
 @use './app/styles/base/_variables' as *;
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
-// @use './app/styles/components/ProfilePicture1.module.scss' as _ProfilePicture1;
+
 
 
 .main {
@@ -53,7 +53,6 @@
   padding: 0;
   text-align: start;
   width: 100%;
-  font-weight: 500;
     // border: 2px solid $secondary-color;
 }
 
@@ -77,8 +76,8 @@
   color:$secondary-color;
   font-size: clamp(1rem, 1.5vw, 1.2rem);
   padding: 0.5em;
-  // margin-bottom: 1em;
   display: inline-block;
+  font-family: $primary-font;
 }
 
 @media screen and (min-width: 320px) {
