About Page text align

--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -51,7 +51,7 @@
   color: $secondary-color;
   margin: 0 auto;
   padding: 0;
-  text-align: start;
+  text-align: justify;
   width: 100%;
     // border: 2px solid $secondary-color;
 }
@@ -70,7 +70,7 @@
   box-sizing: border-box;
   width: 100%;
   max-width: 1100px;
-  text-align: start;
+  text-align: justify;
   margin: 0 auto;
   margin-bottom: 1em;
   color:$secondary-color;
