--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -71,16 +71,17 @@
     filter: grayscale(0);
   }
 
-  .imgContainer:hover {
-      transition: all 0.5s ease-in-out;
-      transform: scale(0.9);
-  }
+  // .imgContainer:hover {
+  //     transition: all 0.5s ease-in-out;
+  //     transform: scale(0.9);
+  // }
 
 
   @media screen and (max-width: 800px) {
     .main {
       width: 100%;
       max-width: 1100px;
+     
     }
     .imgContainer {
       width: 100%;
@@ -88,7 +89,9 @@
       margin: 0 auto;
       overflow: hidden;
       background-position: center;
-
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-clip: content-box;
     }
   }
 
