add colors to variables

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -7,6 +7,14 @@ $tertiary-color: #e74c3c;
 $quaternary-color: #3498db;
 $quinary-color: #f1c40f;
 $senary-color: #2ecc71;
+$septenary-color: #075e54;
+$octonary-color: #128c7e;
+$nonary-color: #25d366;
+$denary-color: #dcf8c6;
+$eleventh-color: #34b7f1;
+$twelfth-color: #ece5dd;
+$thirteenth-color: #e1e1e1;
+$fourteenth-color: #f5f5f5;
 
 $breakpoint-mobile: 480px;
 $breakpoint-tablet: 768px;
