--- a/app/styles/pages/recent.module.scss
+++ b/app/styles/pages/recent.module.scss
@@ -20,3 +20,70 @@
   margin: 0 auto;
   margin-bottom: 1em;
 }
+
+.imgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1100px;
+  min-width: none;
+  background-clip: content-box;
+  border-radius: 0.2em;// 
+  overflow: hidden;
+  margin: 0 auto;
+  transition: all 0.5s ease-in-out;
+  li{
+    list-style: none;
+  }
+  
+  ul{
+    margin: 0 auto;
+    padding: 0;
+  
+  }
+}
+
+.object-contain {
+  object-fit: contain;
+}
+
+.duration-700 {
+  transition-duration: 1300ms;
+}
+
+.ease-in-out {
+  transition-timing-function: ease-in-out;
+}
+
+.group-hover\:opacity-75:hover {
+  transition: all 0.5s ease-in-out;
+}
+
+.scale-110 {
+  transform: scale(1.1);
+}
+
+.blur-2xl {
+  filter: blur(16px);
+}
+
+.grayscale {
+  filter: blur(70%);
+}
+
+.scale-100 {
+  transform: scale(1);
+}
+
+.blur-0 {
+  filter: blur(1);
+}
+
+.grayscale-0 {
+  filter: grayscale(0);
+}
+
+
+
+
