style Recent page, nav bar links, _variables and ban ner

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -14,7 +14,7 @@ $denary-color: #dcf8c6;
 $eleventh-color: #34b7f1;
 $twelfth-color: #ece5dd;
 $thirteenth-color: #e1e1e1;
-$fourteenth-color: #f5f5f5;
+$fourteenth-color: #a8a4a4;
 
 $breakpoint-mobile: 480px;
 $breakpoint-tablet: 768px;
