--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -71,10 +71,10 @@
     filter: grayscale(0);
   }
 
-  // .imgContainer:hover {
-  //     transition: all 0.5s ease-in-out;
-  //     transform: scale(0.9);
-  // }
+  .imgContainer:hover {
+      transition: all 0.2s ease-in-out;
+      transform: scale(0.99);
+  }
 
 
   @media screen and (max-width: 800px) {
