--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -47,7 +47,9 @@
     list-style: none;
     font-size: $font-size-small;
     margin-left: 1em;
-   
+    letter-spacing: 0.05em;
+    color: $fourteenth-color;
+    box-sizing: border-box;
 
 
     &.open {
@@ -76,11 +78,7 @@
       padding-bottom: 15em;
       padding-top: 7em;
       height: 100vh;
-     
-      
-    
-      
-      
+       
       li {
         margin-bottom: 1rem;
         text-decoration: none;
@@ -100,7 +98,6 @@
     }
     
   }
-
     .navLinks a:hover {
       color: black;
       transition: all 0.3s ease-in-out;
