--- a/app/styles/pages/recent.module.scss
+++ b/app/styles/pages/recent.module.scss
@@ -11,6 +11,7 @@
   margin: 0 auto;
   line-height: 1.5;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -33,15 +34,44 @@
   overflow: hidden;
   margin: 0 auto;
   transition: all 0.5s ease-in-out;
+  
+
   li{
     list-style: none;
+    margin: 0 auto;
+    padding: 0;
+    
   }
   
   ul{
     margin: 0 auto;
     padding: 0;
-  
   }
+  :hover {
+    transform: scale(0.99);
+    transition: all 0.2s ease-in-out;
+  }
+}
+
+.title{
+  font-size: clamp(1.6rem, 5vw, 2rem);
+  font-weight: 300;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  text-align: center;
+  font-family: $primary-font;
+  top: 0;
+  color: $secondary-color;
+  background-color: $primary-color;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0.5em;
+  border-radius: 0.2em;
+  box-sizing: border-box; 
+  letter-spacing: 0.2em;
+  border: 1px solid $thirteenth-color;
+  
 }
 
 .object-contain {
@@ -85,5 +115,28 @@
 }
 
 
+@media screen and (max-width: 800px) {
+  .main {
+    width: 100%;
+    max-width: 1100px;
+   
+  }
+  .imgContainer {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-bottom: 0.5em;
+  }
+}
+.title{
+  
+  font-weight: 300;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  text-align: center;
+  font-family: $primary-font;
+  top: 0;
+}
 
 
