--- a/app/styles/pages/series.module.scss
+++ b/app/styles/pages/series.module.scss
@@ -18,4 +18,38 @@
   align-items: center;
   margin: 0 auto;
   margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+.titleContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1100px;
+  min-width: none;
+  background-clip: content-box;
+  border-radius: 0.2em;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.title{
+  font-size: clamp(1.5rem, 5vw, 1.8rem);
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  font-weight: 300;
+  text-align: center;
+  font-family: $primary-font;
+  top: 0;
+  color: $secondary-color;
+  background-color: $primary-color;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0.7em;
+  border-radius: 0.2em;
+  box-sizing: border-box; 
+  letter-spacing: 0.2em;
+  border: 1px solid $thirteenth-color;
 }
