--- a/app/styles/pages/about.module.scss
+++ b/app/styles/pages/about.module.scss
@@ -53,6 +53,7 @@
   text-align: justify;
   width: 100%;
   font-weight: 400;
+  letter-spacing: 0.1em;
 }
 
 .section{
@@ -77,6 +78,7 @@
   padding: 0.7em;
   display: inline-block;
   font-family: $primary-font;
+  letter-spacing: 0.1em;
 }
 
 @media screen and (min-width: 320px) {
