--- a/app/styles/pages/series.module.scss
+++ b/app/styles/pages/series.module.scss
@@ -2,6 +2,7 @@
 @use './app/styles/utils/_mixins' as _mixins;
 @use './app/styles/base/_base' as _base;
 
+
 .main {
   width: 100%;
   max-width: 1100px;
@@ -10,6 +11,9 @@
   margin: 0 auto;
   line-height: 1.5;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+
+  background-color: none;
 }
 
 .container {
@@ -17,11 +21,10 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  margin-bottom: 5em;
 }
 
-.titleContainer {
+.imgContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,16 +32,35 @@
   max-width: 1100px;
   min-width: none;
   background-clip: content-box;
-  border-radius: 0.2em;
+  border-radius: 0.2em;// 
   overflow: hidden;
   margin: 0 auto;
+  transition: all 0.5s ease-in-out;
+  
+  
+
+  li{
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+    
+  }
+  
+  ul{
+    margin: 0 auto;
+    padding: 0;
+  }
+  // :hover {
+  //   transform: scale(0.99);
+  //   transition: all 0.2s ease-in-out;
+  // }
 }
 
 .title{
   font-size: clamp(1.5rem, 5vw, 1.8rem);
+  font-weight: 300;
   margin-bottom: 0.5em;
   margin-top: 0.5em;
-  font-weight: 300;
   text-align: center;
   font-family: $primary-font;
   top: 0;
@@ -47,9 +69,77 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0.7em;
+  padding: 0.5em;
   border-radius: 0.2em;
   box-sizing: border-box; 
   letter-spacing: 0.2em;
   border: 1px solid $thirteenth-color;
+  
 }
+
+.object-contain {
+  object-fit: contain;
+}
+
+.duration-700 {
+  transition-duration: 1300ms;
+}
+
+.ease-in-out {
+  transition-timing-function: ease-in-out;
+}
+
+.group-hover\:opacity-75:hover {
+  transition: all 0.5s ease-in-out;
+}
+
+.scale-110 {
+  transform: scale(1.1);
+}
+
+.blur-2xl {
+  filter: blur(16px);
+}
+
+.grayscale {
+  filter: blur(70%);
+}
+
+.scale-100 {
+  transform: scale(1);
+}
+
+.blur-0 {
+  filter: blur(1);
+}
+
+.grayscale-0 {
+  filter: grayscale(0);
+}
+
+
+@media screen and (max-width: 800px) {
+  .main {
+    width: 100%;
+    max-width: 1100px;
+   
+  }
+  .imgContainer {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    overflow: hidden;
+    margin-bottom: 0.5em;
+  }
+}
+.title{
+  
+  font-weight: 300;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
+  text-align: center;
+  font-family: $primary-font;
+  top: 0;
+}
+
+
