Style series page, fetch titles for dynamic routing

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -13,7 +13,7 @@ $nonary-color: #25d366;
 $denary-color: #dcf8c6;
 $eleventh-color: #34b7f1;
 $twelfth-color: #ece5dd;
-$thirteenth-color: #e1e1e1;
+$thirteenth-color: #5f5b5b;
 $fourteenth-color: #a8a4a4;
 
 $breakpoint-mobile: 480px;
