--- a/app/styles/components/Navbar.module.scss
+++ b/app/styles/components/Navbar.module.scss
@@ -88,7 +88,7 @@
 
     a {
       text-decoration: none;
-      color: gray;
+      color: $thirteenth-color;
       margin: 0 auto;
       display: flex;
     }
@@ -99,14 +99,13 @@
     
   }
     .navLinks a:hover {
-      color: black;
+      color: $secondary-color;
       transition: all 0.3s ease-in-out;
       
     }
     .navLinks a:active {
-      color: gainsboro;
+      color: $fourteenth-color;
       transition: all 0.8s ease-in-out;
-      
     }
 
 
