--- a/app/styles/pages/series.module.scss
+++ b/app/styles/pages/series.module.scss
@@ -24,7 +24,7 @@
   margin-bottom: 5em;
 }
 
-.imgContainer {
+.titleContainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,6 +76,60 @@
   border: 1px solid $thirteenth-color;
   
 }
+.seriesTitleContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1100px;
+  min-width: none;
+  background-clip: content-box;
+  border-radius: 0.2em;// 
+  overflow: hidden;
+  margin: 0 auto;
+  transition: all 0.5s ease-in-out;
+
+  a{
+    text-decoration: none;
+  }
+  
+
+  li{
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+    text-decoration: none;
+    
+  }
+  
+  ul{
+    margin: 0 auto;
+    padding: 0;
+  }
+  h1{
+    font-size: clamp(1.5rem, 5vw, 1.8rem);
+    font-weight: 300;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    text-align: center;
+    font-family: $primary-font;
+    top: 0;
+    color: $thirteenth-color;
+    background-color: $primary-color;
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 1.2em;
+    border-radius: 0.2em;
+    box-sizing: border-box; 
+    letter-spacing: 0.2em;
+  }
+  h1:hover{
+    color: $secondary-color;
+    transition: all 0.5s ease-in-out;
+  }
+}
+
 
 .object-contain {
   object-fit: contain;
