--- a/app/styles/components/Banner.module.scss
+++ b/app/styles/components/Banner.module.scss
@@ -16,6 +16,7 @@
     box-shadow: 0 0 0.5em 0.1em rgba(0, 0, 0, 0.2);
     border-radius: 0.2em;
   }
+ 
 
   .imgContainer {
     display: flex;
@@ -28,53 +29,68 @@
     border-radius: 0.2em;// 
     overflow: hidden;
     margin: 0 auto;
-    transition: all 0.5s ease-in-out;
+    
   }
-
-  .object-contain {
-    object-fit: contain;
+  .transition-opacity {
+    transition-property: opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+  .opacity-0 {
+    opacity: 0;
   }
   
-  .duration-700 {
-    transition-duration: 1300ms;
+  .duration-300 {
+    transition-duration: 2000ms;
   }
   
   .ease-in-out {
     transition-timing-function: ease-in-out;
   }
-  
-  .group-hover\:opacity-75:hover {
-    transition: all 0.5s ease-in-out;
-  }
-  
-  .scale-110 {
-    transform: scale(1.1);
-  }
-  
-  .blur-2xl {
-    filter: blur(16px);
-  }
-  
-  .grayscale {
-    filter: blur(70%);
-  }
-  
-  .scale-100 {
-    transform: scale(1);
-  }
-  
-  .blur-0 {
-    filter: blur(1);
-  }
-  
-  .grayscale-0 {
-    filter: grayscale(0);
-  }
-
-  // .imgContainer:hover {
-  //     transition: all 0.2s ease-in-out;
-  //     transform: scale(0.99);
+  // .object-contain {
+  //   object-fit: contain;
   // }
+  
+  // .duration-700 {
+  //   transition-duration: 1300ms;
+  // }
+  
+  // .ease-in-out {
+  //   transition-timing-function: ease-in-out;
+  // }
+  
+  // .group-hover\:opacity-75:hover {
+  //   transition: all 0.5s ease-in-out;
+  // }
+  
+  // .scale-110 {
+  //   transform: scale(1.1);
+  // }
+  
+  // .blur-2xl {
+  //   filter: blur(16px);
+  // }
+  
+  // .grayscale {
+  //   filter: blur(70%);
+  // }
+  
+  // .scale-100 {
+  //   transform: scale(1);
+  // }
+  
+  // .blur-0 {
+  //   filter: blur(1);
+  // }
+  
+  // .grayscale-0 {
+  //   filter: grayscale(0);
+  // }
+
+  // // .imgContainer:hover {
+  // //     transition: all 0.2s ease-in-out;
+  // //     transform: scale(0.99);
+  // // }
 
 
   @media screen and (max-width: 800px) {
